@@ -21,8 +21,7 @@ import theWordI.backend.domain.meditation.repository.MeditationVerseRepository;
 import theWordI.backend.util.SecurityUtil;
 
 import java.time.LocalDate;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
@@ -33,6 +32,37 @@ public class MeditationService {
 
     protected final MeditationRepository repository;
     protected  final MeditationVerseRepository verse_repository;
+
+    //명상 기록 조회(1건)
+    public Meditation getMyMeditation(Long meditationId)
+    {
+        return repository.findByMeditationIdAndUserId(meditationId, SecurityUtil.getUserId())
+                .orElseThrow(() -> new EntityNotFoundException("해당 묵상정보가 없습니다."));
+    }
+
+
+    //명상 기록 모두 조회(N건)
+    public Slice<MeditationListResponse> getMyMeditations(String title,
+                                                        LocalDate startDt,
+                                                        LocalDate endDt,
+                                                        Pageable pageable)
+    {
+        List<MeditationListResponse> list = repository.findMeditationList(SecurityUtil.getUserId(),
+                title,
+                startDt,
+                endDt,
+                pageable.getPageSize() + 1,
+                pageable.getOffset()
+        );
+
+        boolean hasNext = list.size() > pageable.getPageSize();
+        List<MeditationListResponse> results = (hasNext) ?
+                list.subList(0, pageable.getPageSize()) : list;
+
+
+        return new SliceImpl<>(results, pageable, hasNext);
+    }
+
 
     @Transactional
     public Long save(MeditationCreateRequest dto)
@@ -46,7 +76,6 @@ public class MeditationService {
                     .mapToObj(i -> MeditationVerse.builder()
                             .meditationId(meditationId)
                             .verseId(verseIds.get(i))
-                            .orderNo(i + 1)
                             .build())
                     .collect(Collectors.toList());
             verse_repository.saveAll(verses);
@@ -54,41 +83,52 @@ public class MeditationService {
         return meditationId;
     }
 
+
+
     @Transactional
     public Long update(MeditationUpdateRequest dto)
     {
         Long meditationId = dto.getMeditationId();
-        Meditation meditation = repository.findById(meditationId)
-                .orElseThrow(() -> new EntityNotFoundException("해당 묵상정보가 없습니다."));
-
-        if (!meditation.isOwner(SecurityUtil.getUserId()))
-        {
-            throw new AccessDeniedException("수정 권한이 없습니다");
-        }
+        Meditation meditation = getMyMeditation(meditationId);
 
         meditation.update(dto.getMeditationDt(),
                 dto.getTitle(),
+                dto.getBibleText(),
+                dto.getEtcText(),
+                dto.getEtcSource(),
                 dto.getText());
 
+        Set<Long> oldSet = new HashSet<>(verse_repository.findVerseIdByMeditationId(meditationId));
+        Set<Long> newSet = dto.getVerseIds() == null ? Collections.emptySet() : new HashSet<>(dto.getVerseIds());
 
-        verse_repository.deleteByMeditationId(meditationId);
-        verse_repository.flush();
+        if (!oldSet.equals(newSet))
+        {
+            verse_repository.deleteByMeditationId(meditationId);
+            verse_repository.flush();
 
-        List<Long> verseIds = dto.getVerseIds();
-        if (verseIds != null && !verseIds.isEmpty()) {
-            List<MeditationVerse> verses = IntStream.range(0, verseIds.size())
-                    .mapToObj(i -> MeditationVerse.builder()
-                            .meditationId(meditationId)
-                            .verseId(verseIds.get(i))
-                            .orderNo(i + 1)
-                            .build())
-                    .collect(Collectors.toList());
-
-            verse_repository.saveAll(verses);
+            if (!newSet.isEmpty()) {
+                List<MeditationVerse> verses = newSet.stream()
+                        .map(verseId -> MeditationVerse.builder()
+                                .meditationId(meditationId)
+                                .verseId(verseId)
+                                .build())
+                        .toList();
+                verse_repository.saveAll(verses);
+            }
         }
         return meditation.getMeditationId();
     }
 
+
+    @Transactional
+    public void delete(Long meditationId)
+    {
+        repository.deleteByMeditationIdAndUserId(
+                meditationId,
+                SecurityUtil.getUserId());
+    }
+
+/*
     @Transactional
     public void delete(Long meditationId)
     {
@@ -143,5 +183,5 @@ public class MeditationService {
 
         return new SliceImpl<>(results, pageable, hasNext);
 
-    }
+    }*/
 }
